--- a/PapagotiTool/PapagotiTool.csproj
+++ b/PapagotiTool/PapagotiTool.csproj
@@ -128,6 +128,7 @@
       <HintPath>..\packages\System.Buffers.4.4.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing.Common, Version=4.0.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -169,11 +170,19 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataConfig\AppSetting.cs" />
+    <Compile Include="DataConfig\SqlHelper.cs" />
     <Compile Include="frmDetailFloor.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmDetailFloor.Designer.cs">
       <DependentUpon>frmDetailFloor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmLocalDatabase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLocalDatabase.Designer.cs">
+      <DependentUpon>frmLocalDatabase.cs</DependentUpon>
     </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
@@ -190,6 +199,7 @@
     <Compile Include="Model\dbContext.cs" />
     <Compile Include="Model\Floor.cs" />
     <Compile Include="Model\FloorFb.cs" />
+    <Compile Include="Model\LoginMachine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ufrmFloorcs.cs">
@@ -200,6 +210,9 @@
     </Compile>
     <EmbeddedResource Include="frmDetailFloor.resx">
       <DependentUpon>frmDetailFloor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmLocalDatabase.resx">
+      <DependentUpon>frmLocalDatabase.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
