--- a/PapagotiTool/Properties/Settings.settings
+++ b/PapagotiTool/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="PwDatabase" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="fileName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
