--- a/PapagotiTool/App.config
+++ b/PapagotiTool/App.config
@@ -44,6 +44,9 @@
       <setting name="fileName" serializeAs="String">
         <value />
       </setting>
+      <setting name="timeRefreshData" serializeAs="String">
+        <value>3000</value>
+      </setting>
     </PapagotiTool.Properties.Settings>
   </userSettings>
 </configuration>
