--- a/PapagotiTool/Properties/Settings.settings
+++ b/PapagotiTool/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="fileName" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="timeRefreshData" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">3000</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
