--- a/PapagotiTool/packages.config
+++ b/PapagotiTool/packages.config
@@ -17,6 +17,7 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net472" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net472" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="OpenTK" version="3.1.0" targetFramework="net472" />
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net472" />
