--- a/PapagotiTool/packages.config
+++ b/PapagotiTool/packages.config
@@ -33,6 +33,7 @@
   <package id="System.Drawing.Common" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net472" />
   <package id="System.Reactive" version="4.0.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
 </packages>
